# g3kb-switch

./: .clang-format  .editorconfig  .gitignore  .mailmap  .pre-commit-config.yaml  .vimrc.pandoc  CMakeLists.txt  LICENSE  README.md  README.md.in  config.h.in  flake.nix  g3kb-switch-completion.bash  g3kb-switch-completion.zsh  g3kb-switch.pc.in  main.c  package.json  pyproject.toml  switch-api.c  switch.c  switch.h
.github/workflows/: main.yml  readme.yml
docs/: README.md  g3kb-switch.1  g3kb-switch.1.in  g3kb-switch.1.md  metadata.json.in
extension/: Makefile
extension/g3kb-switch@g3kb-switch.org/: LICENSE  extension.js  metadata.json  package.json
extension/g3kb-switch@g3kb-switch.org-legacy/: .yarnrc.yml  extension.js  metadata.json  package.json
